# libgrizzlycloud

./: .gitmodules  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac
config/: backends.cfg  client.cfg  localhost.cfg  server.cfg
example/client/: Makefile  client.c  client.h  main.c
script/: client.sh  server.sh
script/alexa/: client.py  keys.py  lambda_function.py  readme  skill.json
src/: async_client.c  async_server.c  backend.c  endpoint.c  fs.c  gcapi.c  hashtable.c  log.c  module.c  pool.c  proto.c  ringbuffer.c  tunnel.c  utils.c
src/include/: async.h  async_server.h  backend.h  endpoint.h  fs.h  gc.h  gcapi.h  hashtable.h  log.h  module.h  pool.h  proto.h  ringbuffer.h  tunnel.h  utils.h
src/modules/: mod_phillipshue.c  mod_webcam.c
test/: all.sh  gc_common
test/ci/001/: backend_cz.cfg  backend_uk.cfg  backend_us.cfg  client.cfg  readme  server.cfg  test.sh
test/rb/: Makefile  main.c
